--- a/Cheyenne.css
+++ b/Cheyenne.css
@@ -1,4 +1,4 @@
-body {background-color:#800080;}
+body {background-color:#40E0D0;}
 	background-image: https://orange-object.github.io/dude/index.html;
 
 }
@@ -16,7 +16,7 @@ body {background-color:#800080;}
 span class="this"
 
 
-body {background-color:#800080;}
+body {background-color:#40E0D0;}
 
 
 ul {
