--- a/Cheyenne.css
+++ b/Cheyenne.css
@@ -93,3 +93,18 @@ ll a:hover {
     display: block;
     margin: 0 auto;
 }
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
