--- a/Cheyenne.css
+++ b/Cheyenne.css
@@ -108,3 +108,16 @@ a:hover {
 a:active {
     text-decoration: underline;
 }
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: red;
+}
