--- a/Cheyenne.css
+++ b/Cheyenne.css
@@ -102,11 +102,11 @@ a:visited {
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:active {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:hover, a:active {
