--- a/google.css
+++ b/google.css
@@ -76,7 +76,7 @@ ll a {
     display: block;
     color: white;
     text-align: center;
-    padding: 16px;
+    padding: 100.0%;
     text-decoration: none;
 }
 
