--- a/google.css
+++ b/google.css
@@ -53,7 +53,7 @@ li a:hover {
 
 al {
     list-style-type: none;
-    margin: 0;
+    margin: 1%;
     padding: 0;
     overflow: hidden;
     background-color: #A9A9A9;
