--- a/google.css
+++ b/google.css
@@ -43,7 +43,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 24%;
+    padding: 30%;
     text-decoration: none;
 }
 
@@ -53,7 +53,7 @@ li a:hover {
 
 al {
     list-style-type: none;
-    margin: 15%;
+    margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #A9A9A9;
