--- a/google.css
+++ b/google.css
@@ -43,9 +43,8 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 25%;
+    padding: 16x;
     text-decoration: none;
-width:78%;
 }
 
 li a:hover {
