--- a/google.css
+++ b/google.css
@@ -43,7 +43,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 35.5px;
+    padding: 12%;
     text-decoration: none;
 }
 
@@ -76,7 +76,7 @@ ll a {
     display: block;
     color: white;
     text-align: center;
-    padding: 35.5px;
+    padding: 12%;
     text-decoration: none;
 }
 
