--- a/google.css
+++ b/google.css
@@ -43,7 +43,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding-left: 80%;
+    padding: 80%;
     text-decoration: none;
 }
 
