--- a/google.css
+++ b/google.css
@@ -76,7 +76,7 @@ ll a {
     display: block;
     color: white;
     text-align: center;
-    padding-left: 40%;
+    padding: 40%;
     text-decoration: none;
 }
 
