--- a/google.css
+++ b/google.css
@@ -43,7 +43,8 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 40%;
+    padding-left: 40%;
+padding-right: 40%;
     text-decoration: none;
 }
 
