--- a/google.css
+++ b/google.css
@@ -37,6 +37,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
+padding-left: 10%;
 padding-right: 110%;
     text-decoration: none;
 }
