--- a/google.css
+++ b/google.css
@@ -37,6 +37,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
+	padding-left: 110%;
 padding-right: 110%;
 	padding:30%;
     text-decoration: none;
