--- a/google.css
+++ b/google.css
@@ -100,7 +100,7 @@ body {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: 100px 100px 100px 100px;
   grid-gap: 10px;
   background-color: #800080;
   color: #444;
