--- a/google.css
+++ b/google.css
@@ -115,7 +115,7 @@ body {
 }
 ---------------------------------------------------------------------------------------------------------------
 body {
-  margin: 40px;
+  margin: 20%;
 }
 
 .rapper {
