--- a/google.css
+++ b/google.css
@@ -94,6 +94,9 @@ ll a:hover {
     margin: 0 auto;
 }
 -------------------------------------------------------------------------------------------------------------
+body {
+  margin: 40px;
+}
 
 .wrapper {
   display: grid;
