--- a/google.css
+++ b/google.css
@@ -120,7 +120,7 @@ body {
 
 .rapper {
   display: grid;
-  grid-template-columns: 20% 20% 20% 20%;
+  grid-template-columns: 20% 20% 20% 20% 20% 20% 20%;
   grid-gap: 2%;
   background-color: #800080;
   color: #444;
