--- a/google.css
+++ b/google.css
@@ -98,7 +98,7 @@ body {
   margin: 200%;
 }
 
-.rapper {
+.wrapper {
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20% 20%;
   grid-gap: 10px;
@@ -108,7 +108,7 @@ body {
 	margin: 0%;
 }
 
-.ox {
+.box {
   background-color: #444;
   color: #fff;
   border-radius: 10%;
