--- a/google.css
+++ b/google.css
@@ -100,7 +100,7 @@ body {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 20% 20% 20% 20% 20% 20%;
+  grid-template-columns: 20% 20% 20% 20% 20% 20% 20% 20% 20% 20%;
   grid-gap: 10px;
   background-color: #800080;
   color: #444;
