--- a/google.css
+++ b/google.css
@@ -115,3 +115,23 @@ body {
   padding: 18%;
   font-size: 150%;
 }
+-------------------------------------------------------------------------------------------------------------
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    background-color: clear;
+}
