--- a/google.css
+++ b/google.css
@@ -111,7 +111,7 @@ a:active {
 }
 
 a:hover, a:active {
-    background-color: clear;
+    background-color: black;
 }
 
 -------------------------------------------------------------------------------------------------------------
