--- a/google.css
+++ b/google.css
@@ -133,7 +133,8 @@ body {
   background-color: #444;
   color: #fff;
   border-radius: 10%;
-  padding: 0%;
+  padding: 18%;
+	padding-left:0%;
   font-size: 150%;
 }
 -------------------------------------------------------------------------------------------------------------
