--- a/google.css
+++ b/google.css
@@ -120,7 +120,7 @@ body {
 }
 
 .wrapper {
-  display: block;
+  display: grid;
   grid-template-columns: 20% 20% 20% 20% 20% 20% 20% 20% 20% 20%;
   grid-gap: 10px;
   background-color: #800080;
