--- a/google.css
+++ b/google.css
@@ -115,6 +115,10 @@ a:hover, a:active {
 }
 
 -------------------------------------------------------------------------------------------------------------
+body {
+  margin: 90%;
+}
+
 
 .wrapper {
   display: grid;
