--- a/google.css
+++ b/google.css
@@ -74,7 +74,7 @@ ll {
 
 ll a {
     display: block;
-    color: white;
+    color: #00FF00;
     text-align: center;
     padding: 16px;
     text-decoration: none;
