--- a/google.css
+++ b/google.css
@@ -74,7 +74,7 @@ ll {
 
 ll a {
     display: block;
-    color: #00FF00;
+    color: white;
     text-align: center;
     padding: 16px;
     text-decoration: none;
@@ -82,6 +82,7 @@ ll a {
 
 ll a:hover {
     background-color: #00ffff;
+	color: #00FF00;
 }  #111111
 
 .img-with-text {
