--- a/google.css
+++ b/google.css
@@ -137,5 +137,6 @@ body {
   border-radius: 10%;
   padding: 18%;
   font-size: 150%;
+	text-align: center;
 }
 -------------------------------------------------------------------------------------------------------------
