--- a/google.css
+++ b/google.css
@@ -116,7 +116,9 @@ a:hover, a:active {
     background-color: clear;
 }
 -------------------------------------------------------------------------------------------------------------
-
+body {
+  margin: 0%;
+}
 
 .wrapper {
   display: grid;
