--- a/13.css
+++ b/13.css
@@ -21,8 +21,8 @@ body {background-color:#40E0D0;}
 .dropbtn {
     background-color: #4CAF50;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    padding: 20%;
+    font-size: 20%;
     border: none;
     cursor: pointer;
 }
@@ -40,14 +40,14 @@ body {background-color:#40E0D0;}
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 180%;
     overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0% 16% 32% 0% rgba(0,0,0,0.2);
 }
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 24% 32%;
     text-decoration: none;
     display: block;
 }
