--- a/13.css
+++ b/13.css
@@ -25,6 +25,7 @@ body {background-color:#40E0D0;}
     font-size: 16px;
     border: none;
     cursor: pointer;
+	 grid-template-columns: 100px 100px 100px;
 }
 
 .dropbtn:hover, .dropbtn:focus {
