--- a/13.css
+++ b/13.css
@@ -38,7 +38,7 @@ body {background-color:#40E0D0;}
 }
 
 .dropdown-content {
-    display: grid;
+    display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
