--- a/13.css
+++ b/13.css
@@ -38,13 +38,16 @@ body {background-color:#40E0D0;}
 }
 
 .dropdown-content {
-    display: none;
+    display: grid;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 grid-template-columns: 100px 100px 100px;
+  grid-gap: 10px;
+        grid-template-columns: [col1-start] 500px  [col2-start] 500px  [col3-start] 500px [col3-end];
+        grid-template-rows: [row1-start] 300px [row2-start] 300px [row2-end];
 }
 
 .dropdown-content a {
