--- a/13.css
+++ b/13.css
@@ -20,7 +20,7 @@ body {background-color:#40E0D0;}
 
 .dropbtn {
     background-color: #4CAF50;
-    color: white;
+    color: black;
     padding: 16px;
     font-size: 16px;
     border: none;
