--- a/13.css
+++ b/13.css
@@ -61,7 +61,7 @@ grid-template-columns: 100px 100px 100px;
 
 .show {display:block;}
 
-li a:hover {
+CS a:hover {
     background-color: #FFFF00;
 }
 #111111
