--- a/13.css
+++ b/13.css
@@ -51,7 +51,7 @@ grid-template-columns: 100px 100px 100px;
 }
 
 .dropdown-content a {
-    color: #FFFF00;
+    color: #800080;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
