--- a/13.css
+++ b/13.css
@@ -25,11 +25,6 @@ body {background-color:#40E0D0;}
     font-size: 16px;
     border: none;
     cursor: pointer;
-	 
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
 }
 
 .dropdown {
@@ -42,12 +37,8 @@ body {background-color:#40E0D0;}
     position: absolute;
     background-color: #FFFF00;
     min-width: 160px;
-    overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-grid-template-columns: 100px 100px 100px;
-  grid-gap: 10px;
-        grid-template-columns: [col1-start] 500px  [col2-start] 500px  [col3-start] 500px [col3-end];
-        grid-template-rows: [row1-start] 300px [row2-start] 300px [row2-end];
+    z-index: 1;
 }
 
 .dropdown-content a {
@@ -58,6 +49,14 @@ grid-template-columns: 100px 100px 100px;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
 
 .show {display:block;}
 
