--- a/13.css
+++ b/13.css
@@ -15,6 +15,8 @@ body {background-color:#40E0D0;}
 </div>
 span class="this"
 
+body {background-color:#40E0D0;}
+
 .dropbtn {
     background-color: #4CAF50;
     color: white;
