--- a/Cheyenne.css
+++ b/Cheyenne.css
@@ -1,4 +1,4 @@
-body {background-color:#40E0D0;}
+body {background-color:https://cbsdallas.files.wordpress.com/2012/05/ballerinas.jpg;}
 	background-image: https://orange-object.github.io/dude/index.html;
 
 }
