--- a/CheyenneS.css
+++ b/CheyenneS.css
@@ -1,4 +1,4 @@
-body {background-color:#40E0D0;}
+body {background-color:#ff8362;}
 	background-image: https://orange-object.github.io/dude/index.html;
 
 }
